# ChangeLog for net-libs/libnftnl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnftnl/ChangeLog,v 1.6 2014/08/26 10:57:04 mrueg Exp $

  26 Aug 2014; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
  Add myself as maintainer. Acked by Chainsaw.

*libnftnl-1.0.2 (25 Aug 2014)

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +libnftnl-1.0.2.ebuild:
  NMU: Version bump bug #518194.

  01 Feb 2014; Steev Klimaszewski <steev@gentoo.org> libnftnl-1.0.0-r2.ebuild:
  Add ~arm keyword. Tested by aholler on armv5

*libnftnl-1.0.0-r2 (22 Jan 2014)

  22 Jan 2014; Tony Vroon <chainsaw@gentoo.org> -libnftnl-1.0.0-r1.ebuild,
  +libnftnl-1.0.0-r2.ebuild, +files/libnftnl-1.0.0-91264d8.patch:
  My previous revert was unnecessary. This is an improved ebuild by dwfreed
  which brings in an upstream patch and additional functionality.

*libnftnl-1.0.0-r1 (20 Jan 2014)

  20 Jan 2014; Tony Vroon <chainsaw@gentoo.org> -libnftnl-1.0.0.ebuild,
  +libnftnl-1.0.0-r1.ebuild:
  Let us actually install this shared library.

*libnftnl-1.0.0 (20 Jan 2014)

  20 Jan 2014; Tony Vroon <chainsaw@gentoo.org> +libnftnl-1.0.0.ebuild,
  +metadata.xml:
  Initial commit, ebuild by me. Dependency of net-firewall/nftables, as
  requested by Robin Kauffman in bug #498724.