@@ -2,6 +2,6 @@ AUX libnftnl-1.0.0-91264d8.patch 1039 SHA256 5fb3f547d1b47b9df6bf7d006bd431e11cd
 DIST libnftnl-1.0.0.tar.bz2 331296 SHA256 139b99637701647984f54cc637175e5fea167397c6045096872b2f55441a6c02 SHA512 f03a60705f3021e807be5e4cc407a2578435d742fe517487034f38dcf2146486a8f7535b8cf19356e21ba17b8c8431db1211704594cfbeb16dbddcd72cc475bc WHIRLPOOL 4398423e540652a34ad673306cb9a121b2f9d126f44ff3bdc363acb0f253e7a882f45a362f5c7d60e313f4f3680ee80ea32d84e01bb8fc71fc0b4f1f3c524781
 DIST libnftnl-1.0.2.tar.bz2 352093 SHA256 78ce27b2e3f513c2f8d9570570e96224a8f55c6ef2c67443bb91d082364346dc SHA512 324b1cbda7e690cce282241a241827e2a6f64fc2508b711d6ffc739fcd3d195a223c7bfba6479543c1ea4f45c6d24d518eaa882cadbf5afe801f7ee0f08dd954 WHIRLPOOL e4a3e4a4c5096b87983a8198ad60b83866e69f8a645e9dbc145d66dca6b25fa3f4c2309fd0f7b199ebc218af94a7e8e1d0f0d495a7f0e4d37ebd072e27425fcd
 EBUILD libnftnl-1.0.0-r2.ebuild 1271 SHA256 4ad227f5429d0944cb1f559232996ae8680a4f49b91e45964e3984594739334d SHA512 41362d79c73d139fb389a4c095a20a4a2ac7211174891e2c4b7e56f7bfb19ee131c33cd1879f427ac74ae2037db8e0d275245b96a6631e9539417f11ed8750c8 WHIRLPOOL 0d114fef8723d2b82a47557ceadb3e9d97b38ec2c9cfbc161efb933fc18b637522d6798856307b23f63afae36f6d1350d59cd45d2f8cd2a5ce0ce96fe413932f
-EBUILD libnftnl-1.0.2.ebuild 1364 SHA256 96f3a70a6782d1c6a516f8a1101725da7858f17a2112673c8e9ee6291ca22f0c SHA512 35cf9f620910ee630ddfa166d8c8ea48c49cb14c0c78177fc2ea30e20aa961c44df4f4abb788b3fa1338da2f57e42cd99fbd581b76980ba58e26c9fd18b67187 WHIRLPOOL 14c3acbfd830c0e98d479a87520a5d50b6f141797c9c18355649c5344541c5563e0b16bb47b32856cbaa594a3fa90f604d51014c0dc447c4675705010c6aeefa
-MISC ChangeLog 1319 SHA256 fa53830323af32d5aac34b6a81a3cf2deefc2da002272b46ef5f95e34190c0d5 SHA512 1fc25fcfbc7cac02c47fcf538a1ffed286ea9336cc6a3c04dcca544109b78511aaf4db1b4c2d16e52de34c21c50b994cd9203da0bca12512f42f7d5f54448624 WHIRLPOOL d1efb2db15396e50937dbe55f5639dbaf9e0d1a597d4c1d5f1b910b48de9584a642a94b4fe15b03b77658b072cd16accc7b9ca2f22fe447e4ee43c70dfbd3ca9
+EBUILD libnftnl-1.0.2.ebuild 1320 SHA256 f17bd2fe5c5aace4760c2406789f2d5dcebf8856a9e638be674d21d43a004221 SHA512 4782dd17e7eb7807cb31841330a1e7a01ce69c6829210051c72b70ccd270d965b0c0ec913ec60532c9a05200c3036ff1558c65cf3053ac7683ba61a77e7b1d04 WHIRLPOOL 7c5e430ead01797c2a5e71488130b670bd07448cfe0275d092e312f2ac2ae328e4084e0a56ce748ce0c42a596c22a026b12f044e14e75299dc14bd93539a2ec4
+MISC ChangeLog 1441 SHA256 679a6ce4c3aaa097b89b19060d96d8a3886df40fff53e7b697c4d5d6a7dce482 SHA512 a4211ed524e5ac16234999589598e4e8f1b98c23f5aa9ddbace103d8b642a4529c9721d9a8bc890a919f4101ef624c189f9243b16603584ce4cba471eb5c9ff9 WHIRLPOOL 12a0fdb3bd4d263139301fa29a08cfae1d1cbc0c4be8cb773f72839ce96a8dfc815597137c72f40ca8d9104f3790d25f8f9443077115e9d7bb670aeb6d6be654
 MISC metadata.xml 317 SHA256 c03ac6820ddd447b01f9c1c418c6acda5325a6cea6e8e5a10317c251cf9a04d0 SHA512 970f225718288522e97b7ef613165d71be0bd1e2e0987a4e52c116bcae03737aa43f0cdf059cd65e4ec3f146f06acfe601eb8975d3277795018213cf1b47310e WHIRLPOOL 52ed5e503b98e2410cb82e7e031ab0c8973381451d2db50907e5d1c2cd2966f0f6516fcaca3e4e1156c1c7c9e4f3ca5f96eb3de9bca1ebb34828905c184832a0
